# eurotest

./: README.md  pyproject.toml  test.db
api/: pyproject.toml
api/src/eurotest/: main.py
src/eurotest/: __init__.py  database.py  db.py  main.py  schema.sql
src/eurotest/html/: index.html
src/eurotest/scripts/: index.js
src/eurotest/static/html/: index.html
src/eurotest/static/scripts/: index.js
