[tool.poetry]
name = "eurotest"
version = "0.1.0"
description = ""
authors = ["Cristobal Bergillos <cristobalbergillosnavarro@gmail.com>"]
readme = "README.md"
packages = [{include = "eurotest", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
quart = "^0.19.4"

[tool.poetry.scripts]
start = "eurotest:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
