[tool.poetry]
name = "eurotest"
version = "0.1.0"
description = ""
authors = ["Cristobal Bergillos <cristobalbergillosnavarro@gmail.com>"]
readme = "README.md"
packages = [{include = "eurotest", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
fastapi = "^0.109.2"
python-multipart = "^0.0.9"
sqlalchemy = "^2.0.27"

[tool.poetry.scripts]
start = "eurotest.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
